# containerflare

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yaml
containerflare-command/: Cargo.toml
containerflare-command/src/: lib.rs
examples/: basic.rs
examples/basic/: Cargo.toml  Dockerfile  Dockerfile.cloudrun  README.md  deploy_cloudflare.sh  deploy_cloudrun.sh  package-lock.json  package.json  wrangler.toml
examples/basic/src/: main.rs
examples/basic/worker/: index.js
examples/cloudrun/: Cargo.toml  Dockerfile  README.md  deploy.sh
examples/cloudrun/src/: main.rs
src/: command.rs  config.rs  context.rs  error.rs  lib.rs  platform.rs  runtime.rs
