[package]
name = "containerflare"
authors = ["sam0x17"]
license = "MIT"
description = "A runtime for writing Rust-based Cloudflare Workers running in the Cloudflare Workers container runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
hyper = { version = "1", features = ["server", "http1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
async-trait = "0.1"
