[package]
name = "containerflare"
version.workspace = true
authors = ["sam0x17"]
description = "A runtime for writing Rust-based Cloudflare Workers running in the Cloudflare Workers container runtime"
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
containerflare-command.workspace = true
dotenvy = "0.15"
axum = "0.7"
hyper = { version = "1", features = ["server", "http1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "io-util", "net", "sync"] }
tracing = "0.1"
async-trait = "0.1"

[workspace]
members = ["containerflare-command",
    "examples/basic",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/sam0x17/containerflare"
keywords = ["cloudflare", "workers", "runtime", "containers", "serverless"]

[workspace.dependencies]
containerflare = { path = "." }
containerflare-command = { path = "containerflare-command", version = "0.2.0" }
