[package]
name = "containerflare-command"
version = "0.1.0"
edition = "2024"
authors = ["sam0x17"]
license = "MIT"
description = "Low-level command channel client used by Containerflare runtimes"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["io-util", "net", "sync", "time"] }
