[package]
name = "containerflare-command"
version.workspace = true
edition.workspace = true
authors = ["sam0x17"]
license.workspace = true
repository.workspace = true
keywords.workspace = true
description = "Low-level command channel client used by Containerflare runtimes"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["io-std", "io-util", "net", "sync", "time"] }
