[package]
name = "containerflare-basic-example"
version.workspace = true
edition.workspace = true
publish = false
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
containerflare = { workspace = true }
