[package]
name = "containerflare-cloudrun-example"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["fmt"] }
containerflare = { path = "../.." }
